appset1/services/jupyter/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterlab
  annotations:
    external-dns.alpha.kubernetes.io/hostname: lab.loeber.live
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
    external-dns.alpha.kubernetes.io/ttl: "120"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: lab.loeber.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jupyterlab
            port:
              name: http
  tls:
  - hosts:
    - lab.loeber.live
    secretName: lab-tls
